[DDW-759] Prevent any modal body overflow

--- a/source/renderer/app/themes/overrides/ModalOverrides.scss
+++ b/source/renderer/app/themes/overrides/ModalOverrides.scss
@@ -24,3 +24,9 @@
     }
   }
 }
+
+:global {
+  .ReactModal__Body--open {
+    overflow: hidden;
+  }
+}
